@@ -1,3 +1,8 @@
+2000-09-03  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* actors.cc (Npc_actor): Skip schedule actions if NPC is in a
+	chunk that hasn't yet been read in fully.
+
 2000-09-01  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* Better sleeping.  Detects occupied beds too.
